# SD

./: .gitignore  .gitmodules  .travis.yml  RFP_IDEF0_Surkov.drawio  azure-pipelines.yml
hw01-cli/: .travis.yml  CLI_UML_Surkov.drawio  CMakeLists.txt  README.md  arg-parse-research.md  build.sh  hw01 cli architecture  run_tests.sh
hw01-cli/includes/: Command.h  CommandArguments.h  CommandBuilder.h  CommandExecutor.h  CommandExecutorFactory.h  CommandName.h  CommandNameHash.h  EchoExecutor.h  Environment.h  ExitExecutor.h  ICommandExecutor.h  IInputStream.h  IOutputChannel.h  IOutputStream.h  IProcessor.h  ITokenizer.h  LinearTokenizer.h  LoopProcessor.h  PipeTokenizer.h  Response.h  Shell.h  Status.h  StringChannel.h  Substitutor.h  Token.h
hw01-cli/includes/channels/: IInputChannel.h  IOutputChannel.h  StringChannel.h
hw01-cli/includes/commands/: Command.h  CommandArguments.h  CommandBuilder.h  CommandExecutorFactory.h  CommandName.h
hw01-cli/includes/executors/: CatExecutor.h  EchoExecutor.h  EmptyExecutor.h  ExitExecutor.h  ExternalExecutor.h  ICommandExecutor.h  PWDExecutor.h  WCExecutor.h
hw01-cli/includes/executors/grep/: GrepArguments.h  GrepExecutor.h
hw01-cli/includes/processors/: IProcessor.h  LoopProcessor.h
hw01-cli/includes/tokenizers/: ITokenizer.h  LinearTokenizer.h  Token.h
hw01-cli/src/: Command.cpp  CommandArguments.cpp  CommandBuilder.cpp  CommandExecutorFactory.cpp  CommandName.cpp  EchoExecutor.cpp  Environment.cpp  ExitExecutor.cpp  ICommandExecutor.cpp  LinearTokenizer.cpp  LoopProcessor.cpp  PipeTokenizer.cpp  Response.cpp  Shell.cpp  Status.cpp  StringChannel.cpp  Substitutor.cpp  Token.cpp  main.cpp
hw01-cli/src/channels/: StringChannel.cpp
hw01-cli/src/commands/: Command.cpp  CommandArguments.cpp  CommandBuilder.cpp  CommandExecutorFactory.cpp  CommandName.cpp
hw01-cli/src/executors/: CatExecutor.cpp  CommandExecutorFactory.cpp  EchoExecutor.cpp  EmptyExecutor.cpp  ExitExecutor.cpp  ExternalExecutor.cpp  GrepExecutor.cpp  ICommandExecutor.cpp  PWDExecutor.cpp  WCExecutor.cpp
hw01-cli/src/executors/grep/: GrepArguments.cpp  GrepExecutor.cpp
hw01-cli/src/processors/: LoopProcessor.cpp
hw01-cli/src/tokenizers/: LinearTokenizer.cpp  Token.cpp
hw01-cli/test/: CMakeLists.txt  EnvironmentTest.cpp  PipeTokenizerTests.cpp  SubstitutorTest.cpp  main.cpp
hw01-cli/test/channels/: StringChannelTest.cpp
hw01-cli/test/commands/: CommandArgumentsTest.cpp  CommandBuilderTest.cpp  CommandExecutorFactoryTest.cpp  CommandNameTest.cpp  CommandTest.cpp
hw01-cli/test/executors/: CatExecutorTest.cpp  CommandExecutorFactoryTest.cpp  EchoExecutorTest.cpp  ExitExecutorTest.cpp  PWDExecutorTest.cpp  WCExecutorTest.cpp
hw01-cli/test/executors/grep/: GrepArgumentsTest.cpp  GrepExecutorTest.cpp
hw01-cli/test/processors/: LoopProcessorTest.cpp
hw01-cli/test/resources/: grep_file.txt  wc_test_file.txt  wc_test_file2.txt
hw01-cli/test/tokenizers/: LinearTokenizerTest.cpp  TokenTest.cpp
hw03-rfp/: RFP_BPMN_Surkov.drawio  RFP_IDEF0_Surkov.drawio  RFP_USE_CASE_Surkov.drawio
pw02-diagrams/: Задаие3.КоммуникационнаяДиаграмма.drawio  Задаие4.КоммуникационнаяДиаграмма.drawio  Задание1.ДиаграммаАктивностей.Сурков.drawio  Задание2.ДиаграммаПоследовательностей.Сурков.drawio  Задание4.ДиаграммаРазвертывания.Сурков.drawio  Задание5.ДиаграммаКонечныхАвтоматов.Сурков.drawio  Задание6.ВременнаяДиаграмма.Сурков.drawio
